infrastructure/services/dev/policies/tests/generate-guardrails/cluster.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: cluster
spec:
  crds:
  - ../crds/ciliumnetworkpolicies.yaml
  resources:
  - apiVersion: v1
    kind: Namespace
    metadata:
      name: preview-template
      labels:
        preview.eliorion.fr/tier: template
  - apiVersion: v1
    kind: ResourceQuota
    metadata:
      name: preview-quota
      namespace: preview-template
    spec:
      hard:
        pods: '80'
  - apiVersion: v1
    kind: LimitRange
    metadata:
      name: preview-limits
      namespace: preview-template
    spec:
      limits:
      - type: Container
        max:
          memory: 2Gi
  - apiVersion: networking.k8s.io/v1
    kind: NetworkPolicy
    metadata:
      name: default-deny
      namespace: preview-template
    spec:
      podSelector: {}
      policyTypes:
      - Ingress
      - Egress
  - apiVersion: cilium.io/v2
    kind: CiliumNetworkPolicy
    metadata:
      name: preview-gateway-ingress
      namespace: preview-template
    spec:
      endpointSelector: {}
      ingress:
      - fromEntities:
        - ingress
