infrastructure/services/dev/policies/tests/generate-guardrails/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-guardrails
policies:
  - ../../generate-guardrails.yaml
resources:
  - resources.yaml
clusterResources:
  - cluster.yaml
variables: ../workloads/values.yaml
results:
  - isGeneratingPolicy: true
    kind: Namespace
    policy: preview-guardrails
    resources: [preview-pr-12]
    generatedResource: generated.yaml
    result: pass
